--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,9 @@ on:
     tags:
     - "v*"
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: GoReleaser build
@@ -19,13 +22,14 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.22
+        go-version: stable
       id: go
 
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v5
       with:
-        version: latest
+        distribution: goreleaser
+        version: "~> v1"
         args: release --clean
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
