chore: update built-in queries

--- a/assets/queries/built-in.yaml
+++ b/assets/queries/built-in.yaml
@@ -4,9 +4,17 @@
 queries:
 - name: "Built-in: Request grouping with a Tx limit"
   script: |-
-    # Write here the command as if you were writing it in a shell script.
+    # The command(s) executed should output varnishlog logs in plain text.
+    # If you're running Varnish locally, the command can be just `varnishlog`.
+    # You can also use `ssh`, `docker exec`, or a simple `cat ~/my.log` to provide them,
+    # as long as the command is not interactive.
+
+    # Write the command as if you were writing it in a shell script.
+
     # Lines that start with a "#" or are empty will be ignored.
-    # Remember to concatenate lines belonging to the same command with a '\' at the end.
+    # Concatenate lines belonging to the same command with a '\' at the end.
+
+    # Press 'e' to edit or 'q' to view more examples.
 
     varnishlog \
     -g request -k 100
@@ -30,7 +38,11 @@ queries:
     -q '(ReqURL ~ "/path" && ReqHeader:foo ~ "bar") or (BereqURL ~ "/path" && BereqHeader:foo ~ "bar")'
 
 - name: "Built-in: ESI requests"
-  script: varnishlog -g request -q 'Begin[3] eq "esi"'
+  script: |-
+    varnishlog -g request -q 'Begin[3] eq "esi"'
+
+    # For recent Varnish versions:
+    #varnishlog -g request -E
 
 - name: "Built-in: Timestamp & HIT"
   script: |-
@@ -77,9 +89,10 @@ queries:
 - name: "Built-in: SSH"
   script: |-
     # Edit 'user@192.168.1.100' to the appropriate user and hostname.
+    # The remote host should be configured to use SSH Key-Based Authentication.
     # To make it work without quoting hell, we're using "heredoc".
 
-    ssh -T user@192.168.1.100 << 'EOF'
+    ssh -o 'BatchMode=yes' -T user@192.168.1.100 << 'EOF'
 
     varnishlog \
     -g request -k 100
